upload all files

--- a/products/polishing/index.html
+++ b/products/polishing/index.html
@@ -271,7 +271,7 @@
         <picture><img src="https://i.imgur.com/FHHDk78.jpeg" alt="Steel Brite Dip"></picture>
         <div class="body">
           <div class="badge-row"><span class="badge">Brite Dip</span><span class="badge">Deburr</span></div>
-          <h3 data-i18n-key="steel_title">เหล็ก (Brite Dip)</h3>
+          <h3 data-i18n-key="steel_title">เหล็ก (Steel Brite Dip)</h3>
           <p data-i18n-key="steel_desc">ขจัดสนิม/รอยและทำผิวเหล็กให้เงาใสแบบกระจก ใช้งานง่าย ได้ผลเร็ว รองรับทั้งจุ่มและกระบวนการไฟฟ้า.</p>
           <a class="more" href="steel-electropolishing-solution.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
@@ -282,7 +282,7 @@
         <picture><img src="https://i.imgur.com/KmCDo7F.png" alt="Polishing for Zinc and Lead"></picture>
         <div class="body">
           <div class="badge-row"><span class="badge">Zinc/Lead</span><span class="badge">Restore Shine</span></div>
-          <h3 data-i18n-key="zn_title">สังกะสีและตะกั่ว</h3>
+          <h3 data-i18n-key="zn_title">สังกะสีและตะกั่ว (Etched to a shine)</h3>
           <p data-i18n-key="zn_desc">ล้างคราบตะกั่ว/ออกไซด์ คืนความเงาสดใส ลดความขรุขระของผิว และเพิ่มความทนต่อการกัดกร่อนของชิ้นงาน.</p>
           <a class="more" href="zinc-electropolishing-solution.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
@@ -427,9 +427,9 @@
         br_desc:"สูตรไร้กรดไนตริก ควันต่ำ คืนความเงางาม ลดคราบเขียว/สนิมแดง ใช้ได้ทั้งจุ่มและถังกลิ้ง พร้อมเข้าสู่ขั้นตอนชุบต่อได้ทันที.",
         al_title:"อะลูมิเนียม (Hot Dip / Electro)",
         al_desc:"ทั้งแบบจุ่มร้อนและอิเล็กโทรโพลิช ควบคุมได้ละเอียด เงาเร็ว ลบคราบ/หมองบนอะลูมิเนียมให้เรียบเนียนทนทาน.",
-        steel_title:"เหล็ก (Brite Dip)",
+        steel_title:"เหล็ก (Steel Brite Dip)",
         steel_desc:"ขจัดสนิม/รอยและทำผิวเหล็กให้เงาใสแบบกระจก ใช้งานง่าย ได้ผลเร็ว รองรับทั้งจุ่มและกระบวนการไฟฟ้า.",
-        zn_title:"สังกะสีและตะกั่ว",
+        zn_title:"สังกะสีและตะกั่ว (Etched to a shine)",
         zn_desc:"ล้างคราบตะกั่ว/ออกไซด์ คืนความเงาสดใส ลดความขรุขระของผิว และเพิ่มความทนต่อการกัดกร่อนของชิ้นงาน.",
         view_details:"ดูรายละเอียด →",
         footer_products:"หมวดผลิตภัณฑ์",
@@ -457,7 +457,7 @@
         al_desc:"Both hot-dip and electro-polish options. Precise control, fast gloss, removes haze and residues—durable, smooth aluminum surfaces.",
         steel_title:"Steel (Brite Dip)",
         steel_desc:"Removes rust/marks and produces a mirror-like steel finish. Simple process, quick results—supports dip or electro steps.",
-        zn_title:"Zinc & Lead",
+        zn_title:"Zinc & Lead (Etched to a shine)",
         zn_desc:"Removes lead deposits/oxides, restores brightness, smooths the surface, and boosts corrosion resistance.",
         view_details:"View Details →",
         footer_products:"Products",
