--- a/products/polishing/zinc-electropolishing-solution.html
+++ b/products/polishing/zinc-electropolishing-solution.html
@@ -349,33 +349,145 @@
         </div>
       </section>
 
-      <!-- Process -->
-      <section id="process" class="reveal section-block" aria-labelledby="process-h">
-        <h2 id="process-h" class="section" data-i18n-key="process_h">ขั้นตอนการทำงาน</h2>
-        <div class="content">
-          <ul>
-            <li data-i18n-key="proc_1">ชิ้นงานซิ้งค์/ซิ้งค์ฉีดทำความสะอาดเบื้องต้น</li>
-            <li data-i18n-key="proc_2">ล้างน้ำสะอาด</li>
-            <li data-i18n-key="proc_3">จุ่ม <strong>ACITEK MZ-52</strong> ~2–3 นาที หรือจนได้เงา</li>
-            <li data-i18n-key="proc_4">ล้างน้ำสะอาดทันที — หลีกเลี่ยงค้างอากาศนาน</li>
-            <li data-i18n-key="proc_5">ล้างน้ำสะอาดอีกครั้ง</li>
-            <li data-i18n-key="proc_6">หากจะชุบ/เคลือบต่อ ให้จุ่มกรดอ่อนปรับสภาพก่อนเข้าบ่อถัดไป</li>
-          </ul>
-        </div>
-      </section>
+<!-- Process -->
+<section id="process" class="reveal section-block" aria-labelledby="process-h">
+  <h2 id="process-h" class="section" data-i18n-key="process_h">ขั้นตอนการทำงาน</h2>
+  <div class="content">
+    <p class="lead" data-i18n-key="process_intro">
+      กระบวนการนี้เป็นวิธีเตรียมผิวชิ้นงานซิงค์เพื่อเพิ่มความเงาและพร้อมสำหรับการชุบเคลือบขั้นต่อไป
+    </p>
+    <ul>
+      <li data-i18n-key="proc_1">
+        <strong>ทำความสะอาดเบื้องต้น:</strong> ชิ้นงานซิงค์หรือซิงค์ฉีดต้องได้รับการทำความสะอาดอย่างทั่วถึงเพื่อกำจัดคราบน้ำมัน, สิ่งสกปรก หรือไขมันที่ติดอยู่
+        การทำความสะอาดที่ดีจะช่วยให้สารเคมีทำงานได้อย่างมีประสิทธิภาพและสม่ำเสมอทั่วทั้งชิ้นงาน
+      </li>
+      <li data-i18n-key="proc_2">
+        <strong>ล้างน้ำสะอาด:</strong> ล้างชิ้นงานที่ทำความสะอาดแล้วด้วยน้ำสะอาดเพื่อชะล้างสารเคมีทำความสะอาดที่ตกค้างอยู่
+      </li>
+      <li data-i18n-key="proc_3">
+        <strong>จุ่ม ACITEK MZ-52:</strong> จุ่มชิ้นงานลงในสารละลาย <em>ACITEK MZ-52</em> เป็นเวลา ~2–3 นาที หรือจนกว่าจะสังเกตเห็นว่าผิวชิ้นงานมีความเงาตามที่ต้องการ
+        ACITEK MZ-52 เป็นสารเคมีชนิดหนึ่งที่ออกแบบมาเพื่อ <em>กัดเงา (brightening dip)</em> โดยเฉพาะสำหรับโลหะผสมสังกะสี (Mazak) และชิ้นส่วนฉีดขึ้นรูปจากสังกะสี
+      </li>
+      <li data-i18n-key="proc_4">
+        <strong>ล้างน้ำสะอาดทันที:</strong> นำชิ้นงานขึ้นจากสารละลาย ACITEK MZ-52 แล้วล้างด้วยน้ำสะอาดทันที
+        <em>ห้ามทิ้งไว้ในอากาศนาน</em> เพราะอาจทำให้เกิดคราบหรือเปลี่ยนสีได้
+      </li>
+      <li data-i18n-key="proc_5">
+        <strong>ล้างน้ำสะอาดอีกครั้ง:</strong> ล้างน้ำซ้ำอีกครั้งเพื่อมั่นใจว่าไม่มีสารเคมีตกค้าง
+      </li>
+      <li data-i18n-key="proc_6">
+        <strong>จุ่มกรดอ่อน:</strong> หากต้องการนำชิ้นงานไปชุบหรือเคลือบต่อในขั้นตอนถัดไป ควรจุ่มชิ้นงานในกรดอ่อนเพื่อ
+        <em>ปรับสภาพผิว (surface conditioning)</em> ให้พร้อมสำหรับการยึดเกาะของชั้นเคลือบ
+      </li>
+    </ul>
+  </div>
+</section>
 
-      <!-- Safety -->
-      <section id="safety" class="reveal section-block" aria-labelledby="safety-h">
-        <h2 id="safety-h" class="section" data-i18n-key="safety_h">ความปลอดภัยและสิ่งแวดล้อม</h2>
-        <div class="content">
-          <ul>
-            <li data-i18n-key="safe_1">สวม PPE: ถุงมือ แว่นตา หน้ากาก ให้เหมาะสม</li>
-            <li data-i18n-key="safe_2">ทำงานในที่อากาศถ่ายเท ระวังการกระเด็นของสารเคมีร้อน</li>
-            <li data-i18n-key="safe_3">ของเสียที่มีโลหะ/กรด: ปรับ pH และบำบัดตามกฎหมายก่อนทิ้ง</li>
-            <li data-i18n-key="safe_4">อ้างอิง SDS/TDS และแนวทาง EHS ของสถานประกอบการ</li>
-          </ul>
-        </div>
-      </section>
+<!-- Safety -->
+<section id="safety" class="reveal section-block" aria-labelledby="safety-h">
+  <h2 id="safety-h" class="section" data-i18n-key="safety_h">ความปลอดภัยและสิ่งแวดล้อม</h2>
+  <div class="content">
+    <p class="lead" data-i18n-key="safety_intro">
+      เนื่องจากกระบวนการนี้ใช้สารเคมี จึงต้องปฏิบัติตามมาตรฐานความปลอดภัยและสิ่งแวดล้อมอย่างเคร่งครัด
+    </p>
+    <ul>
+      <li data-i18n-key="safe_1">
+        <strong>การป้องกันส่วนบุคคล (PPE):</strong> ควร <em>สวมถุงมือ, แว่นตานิรภัย, และหน้ากาก</em> ที่เหมาะสมเพื่อป้องกันการสัมผัสโดยตรงกับสารเคมีและไอระเหย
+      </li>
+      <li data-i18n-key="safe_2">
+        <strong>พื้นที่ทำงาน:</strong> ควรทำงานใน <em>พื้นที่ที่มีการระบายอากาศดี</em> และระมัดระวัง <em>การกระเด็น</em> ของสารเคมีในขณะที่ทำงาน โดยเฉพาะอย่างยิ่งหากสารละลายมีความร้อน
+      </li>
+      <li data-i18n-key="safe_3">
+        <strong>การจัดการของเสีย:</strong> ของเสียจากกระบวนการนี้จะมีส่วนผสมของ <em>กรด</em> และ <em>โลหะ</em> ที่ถูกละลายออกมาจากชิ้นงาน
+        ก่อนจะทิ้งลงสู่สิ่งแวดล้อม จะต้องผ่านการ <em>ปรับค่า pH ให้เป็นกลาง</em> และ <em>บำบัด</em> เพื่อกำจัดโลหะหนักตามที่ <em>กฎหมายท้องถิ่น</em> กำหนด
+      </li>
+      <li data-i18n-key="safe_4">
+        <strong>เอกสารอ้างอิง:</strong> ควรศึกษาข้อมูลจาก <em>SDS (Safety Data Sheet)</em> และ <em>TDS (Technical Data Sheet)</em> ของผลิตภัณฑ์ ACITEK MZ-52
+        รวมถึงแนวทางด้านสิ่งแวดล้อม สุขภาพ และความปลอดภัย (EHS) ของสถานประกอบการนั้นๆ เพื่อให้เกิดความปลอดภัยสูงสุด
+      </li>
+    </ul>
+  </div>
+</section>
+
+<!-- Issues -->
+<section id="issues" class="reveal section-block" aria-labelledby="issues-h">
+  <h2 id="issues-h" class="section" data-i18n-key="issues_h">ปัญหาที่พบบ่อย</h2>
+  <div class="content">
+    <p data-i18n-key="issues_intro">
+      จากขั้นตอนดังกล่าว ต่อไปนี้คือ 5 ปัญหาที่อาจพบขณะใช้งาน ACITEK MZ-52 พร้อมสาเหตุและแนวทางแก้ไขแบบละเอียด
+    </p>
+
+    <div class="issue">
+      <p class="lead" data-i18n-key="issue1_title"><strong>1) ผิวชิ้นงานเป็นคราบหรือจุดด่าง (Stained or Spotted Surface)</strong></p>
+      <p data-i18n-key="issue1_causes_h"><em>สาเหตุ:</em></p>
+      <ul>
+        <li data-i18n-key="issue1_cause_1">การล้างไม่สมบูรณ์: การล้างน้ำไม่ดีพอหลังจากจุ่มสารเคมี ทำให้สารเคมีตกค้างและทำปฏิกิริยากับผิว</li>
+        <li data-i18n-key="issue1_cause_2">การค้างในอากาศนาน: ระหว่างยกจากบ่อจนถึงการล้าง เกิดออกซิเดชันเฉพาะจุด</li>
+      </ul>
+      <p data-i18n-key="issue1_fixes_h"><em>วิธีแก้ไข:</em></p>
+      <ul>
+        <li data-i18n-key="issue1_fix_1">ตรวจสอบและเพิ่มประสิทธิภาพการล้าง (จำนวนบ่อ/เวลาล้าง/การไหลเวียน)</li>
+        <li data-i18n-key="issue1_fix_2">ลดเวลาระหว่างยกชิ้นงานกับการล้างให้สั้นที่สุด</li>
+      </ul>
+    </div>
+
+    <div class="issue">
+      <p class="lead" data-i18n-key="issue2_title"><strong>2) ความเงาไม่สม่ำเสมอทั่วทั้งชิ้นงาน (Uneven Brightening)</strong></p>
+      <p data-i18n-key="issue2_causes_h"><em>สาเหตุ:</em></p>
+      <ul>
+        <li data-i18n-key="issue2_cause_1">การทำความสะอาดเริ่มต้นไม่ทั่วถึง: คราบไขมัน/สิ่งสกปรกหลงเหลือ</li>
+        <li data-i18n-key="issue2_cause_2">ฟองอากาศติดผิวขณะจุ่ม ทำให้สารละลายสัมผัสไม่ทั่วถึง</li>
+      </ul>
+      <p data-i18n-key="issue2_fixes_h"><em>วิธีแก้ไข:</em></p>
+      <ul>
+        <li data-i18n-key="issue2_fix_1">เพิ่มประสิทธิภาพการล้างไขมัน (ความเข้มข้น/อุณหภูมิ/เวลา)</li>
+        <li data-i18n-key="issue2_fix_2">เขย่าหรือแกว่งชิ้นงานเบา ๆ ระหว่างจุ่มเพื่อไล่ฟองอากาศ</li>
+      </ul>
+    </div>
+
+    <div class="issue">
+      <p class="lead" data-i18n-key="issue3_title"><strong>3) ชิ้นงานเกิดการกัดกร่อนมากเกินไป (Excessive Etching)</strong></p>
+      <p data-i18n-key="issue3_causes_h"><em>สาเหตุ:</em></p>
+      <ul>
+        <li data-i18n-key="issue3_cause_1">จุ่มนานเกินช่วงแนะนำ (เกิน ~2–3 นาที)</li>
+        <li data-i18n-key="issue3_cause_2">อุณหภูมิสารละลายสูงเกินไปทำให้อัตราปฏิกิริยาเร็วผิดปกติ</li>
+      </ul>
+      <p data-i18n-key="issue3_fixes_h"><em>วิธีแก้ไข:</em></p>
+      <ul>
+        <li data-i18n-key="issue3_fix_1">ควบคุมเวลาให้แม่นยำด้วยตัวจับเวลา</li>
+        <li data-i18n-key="issue3_fix_2">ควบคุมอุณหภูมิบ่อให้เป็นไปตามข้อกำหนดผู้ผลิต</li>
+      </ul>
+    </div>
+
+    <div class="issue">
+      <p class="lead" data-i18n-key="issue4_title"><strong>4) ประสิทธิภาพของน้ำยาเสื่อมลงอย่างรวดเร็ว (Rapid Deterioration of Solution)</strong></p>
+      <p data-i18n-key="issue4_causes_h"><em>สาเหตุ:</em></p>
+      <ul>
+        <li data-i18n-key="issue4_cause_1">การปนเปื้อนโลหะ/สารอินทรีย์ในบ่อ</li>
+        <li data-i18n-key="issue4_cause_2">ความเข้มข้นไม่เหมาะสม และไม่มีการปรับเติมเมื่อจำเป็น</li>
+      </ul>
+      <p data-i18n-key="issue4_fixes_h"><em>วิธีแก้ไข:</em></p>
+      <ul>
+        <li data-i18n-key="issue4_fix_1">รักษาความสะอาดบ่อและชิ้นงานก่อนจุ่ม</li>
+        <li data-i18n-key="issue4_fix_2">หมั่นตรวจ/บันทึก และปรับเติมตามคำแนะนำของผู้ผลิต</li>
+      </ul>
+    </div>
+
+    <div class="issue">
+      <p class="lead" data-i18n-key="issue5_title"><strong>5) การชุบ/เคลือบต่อยึดเกาะไม่ดี (Poor Adhesion in Subsequent Coating)</strong></p>
+      <p data-i18n-key="issue5_causes_h"><em>สาเหตุ:</em></p>
+      <ul>
+        <li data-i18n-key="issue5_cause_1">ไม่ได้ปรับสภาพผิวด้วยกรดอ่อนก่อนเข้าบ่อถัดไป</li>
+        <li data-i18n-key="issue5_cause_2">เกิดออกซิเดชันซ้ำเพราะค้างอากาศนานหรือการล้างไม่เพียงพอ</li>
+      </ul>
+      <p data-i18n-key="issue5_fixes_h"><em>วิธีแก้ไข:</em></p>
+      <ul>
+        <li data-i18n-key="issue5_fix_1">จุ่มกรดอ่อน (acid activation) สั้น ๆ ตามด้วยล้าง DI ให้สะอาด</li>
+        <li data-i18n-key="issue5_fix_2">จัดลำดับงานให้ <em>ยก–ล้าง–เข้าบ่อถัดไป</em> โดยไม่ปล่อยค้างอากาศ</li>
+      </ul>
+    </div>
+  </div>
+</section>
 
     </article>
   </main>
@@ -488,19 +600,66 @@
         specs_v_rinse:"ล้างน้ำ/DI ทันทีหลังจุ่ม",
         specs_n_rinse:"หลีกเลี่ยงค้างอากาศ > 3 วิ",
 
-        process_h:"ขั้นตอนการทำงาน",
-        proc_1:"ชิ้นงานซิ้งค์/ซิ้งค์ฉีดทำความสะอาดเบื้องต้น",
-        proc_2:"ล้างน้ำสะอาด",
-        proc_3:"จุ่ม ACITEK MZ-52 ~2–3 นาที หรือจนได้เงา",
-        proc_4:"ล้างน้ำสะอาดทันที — หลีกเลี่ยงค้างอากาศนาน",
-        proc_5:"ล้างน้ำสะอาดอีกครั้ง",
-        proc_6:"หากจะชุบ/เคลือบต่อ ให้จุ่มกรดอ่อนปรับสภาพก่อนเข้าบ่อถัดไป",
+    process_h: "ขั้นตอนการทำงาน",
+    process_intro: "กระบวนการนี้เป็นวิธีเตรียมผิวชิ้นงานซิงค์เพื่อเพิ่มความเงาและพร้อมสำหรับการชุบเคลือบขั้นต่อไป",
+    proc_1: "ทำความสะอาดเบื้องต้น: ชิ้นงานซิงค์หรือซิงค์ฉีดต้องได้รับการทำความสะอาดอย่างทั่วถึงเพื่อกำจัดคราบน้ำมัน, สิ่งสกปรก หรือไขมันที่ติดอยู่ การทำความสะอาดที่ดีจะช่วยให้สารเคมีทำงานได้อย่างมีประสิทธิภาพและสม่ำเสมอทั่วทั้งชิ้นงาน",
+    proc_2: "ล้างน้ำสะอาด: ล้างชิ้นงานที่ทำความสะอาดแล้วด้วยน้ำสะอาดเพื่อชะล้างสารเคมีทำความสะอาดที่ตกค้างอยู่",
+    proc_3: "จุ่ม ACITEK MZ-52: จุ่มชิ้นงานลงในสารละลาย ACITEK MZ-52 เป็นเวลา ~2–3 นาที หรือจนกว่าจะสังเกตเห็นว่าผิวชิ้นงานมีความเงาตามที่ต้องการ ACITEK MZ-52 เป็นสารเคมีชนิดหนึ่งที่ออกแบบมาเพื่อกัดเงา (brightening dip) โดยเฉพาะสำหรับโลหะผสมสังกะสี (Mazak) และชิ้นส่วนฉีดขึ้นรูปจากสังกะสี",
+    proc_4: "ล้างน้ำสะอาดทันที: นำชิ้นงานขึ้นจากสารละลาย ACITEK MZ-52 แล้วล้างด้วยน้ำสะอาดทันที ห้ามทิ้งไว้ในอากาศนาน เพราะอาจทำให้เกิดคราบหรือเปลี่ยนสีได้",
+    proc_5: "ล้างน้ำสะอาดอีกครั้ง: ล้างน้ำซ้ำอีกครั้งเพื่อมั่นใจว่าไม่มีสารเคมีตกค้าง",
+    proc_6: "จุ่มกรดอ่อน: หากต้องการนำชิ้นงานไปชุบหรือเคลือบต่อในขั้นตอนถัดไป ควรจุ่มชิ้นงานในกรดอ่อนเพื่อปรับสภาพผิว (surface conditioning) ให้พร้อมสำหรับการยึดเกาะของชั้นเคลือบ",
 
-        safety_h:"ความปลอดภัยและสิ่งแวดล้อม",
-        safe_1:"สวม PPE: ถุงมือ แว่นตา หน้ากาก ให้เหมาะสม",
-        safe_2:"ทำงานในที่อากาศถ่ายเท ระวังการกระเด็นของสารเคมีร้อน",
-        safe_3:"ของเสียที่มีโลหะ/กรด: ปรับ pH และบำบัดตามกฎหมายก่อนทิ้ง",
-        safe_4:"อ้างอิง SDS/TDS และแนวทาง EHS ของสถานประกอบการ",
+    // Safety
+    safety_h: "ความปลอดภัยและสิ่งแวดล้อม",
+    safety_intro: "เนื่องจากกระบวนการนี้ใช้สารเคมี จึงต้องปฏิบัติตามมาตรฐานความปลอดภัยและสิ่งแวดล้อมอย่างเคร่งครัด",
+    safe_1: "การป้องกันส่วนบุคคล (PPE): ควรสวมถุงมือ, แว่นตานิรภัย, และหน้ากาก ที่เหมาะสมเพื่อป้องกันการสัมผัสโดยตรงกับสารเคมีและไอระเหย",
+    safe_2: "พื้นที่ทำงาน: ควรทำงานในพื้นที่ที่มีการระบายอากาศดี และระมัดระวังการกระเด็นของสารเคมีในขณะที่ทำงาน โดยเฉพาะอย่างยิ่งหากสารละลายมีความร้อน",
+    safe_3: "การจัดการของเสีย: ของเสียจากกระบวนการนี้จะมีส่วนผสมของกรด และโลหะ ที่ถูกละลายออกมาจากชิ้นงาน ก่อนจะทิ้งลงสู่สิ่งแวดล้อม จะต้องผ่านการปรับค่า pH ให้เป็นกลาง และบำบัด เพื่อกำจัดโลหะหนักตามที่กฎหมายท้องถิ่น กำหนด",
+    safe_4: "เอกสารอ้างอิง: ควรศึกษาข้อมูลจาก SDS (Safety Data Sheet) และ TDS (Technical Data Sheet) ของผลิตภัณฑ์ ACITEK MZ-52 รวมถึงแนวทางด้านสิ่งแวดล้อม สุขภาพ และความปลอดภัย (EHS) ของสถานประกอบการนั้นๆ เพื่อให้เกิดความปลอดภัยสูงสุด",
+
+    // Issues
+    issues_h: "ปัญหาที่พบบ่อย",
+    issues_intro: "จากขั้นตอนดังกล่าว ต่อไปนี้คือ 5 ปัญหาที่อาจพบขณะใช้งาน ACITEK MZ-52 พร้อมสาเหตุและแนวทางแก้ไขแบบละเอียด",
+
+    issue1_title: "1) ผิวชิ้นงานเป็นคราบหรือจุดด่าง (Stained or Spotted Surface)",
+    issue1_causes_h: "สาเหตุ:",
+    issue1_cause_1: "การล้างไม่สมบูรณ์: การล้างน้ำไม่ดีพอหลังจากจุ่มสารเคมี ทำให้สารเคมีตกค้างและทำปฏิกิริยากับผิว",
+    issue1_cause_2: "การค้างในอากาศนาน: ระหว่างยกจากบ่อจนถึงการล้าง เกิดออกซิเดชันเฉพาะจุด",
+    issue1_fixes_h: "วิธีแก้ไข:",
+    issue1_fix_1: "ตรวจสอบและเพิ่มประสิทธิภาพการล้าง (จำนวนบ่อ/เวลาล้าง/การไหลเวียน)",
+    issue1_fix_2: "ลดเวลาระหว่างยกชิ้นงานกับการล้างให้สั้นที่สุด",
+
+    issue2_title: "2) ความเงาไม่สม่ำเสมอทั่วทั้งชิ้นงาน (Uneven Brightening)",
+    issue2_causes_h: "สาเหตุ:",
+    issue2_cause_1: "การทำความสะอาดเริ่มต้นไม่ทั่วถึง: คราบไขมัน/สิ่งสกปรกหลงเหลือ",
+    issue2_cause_2: "ฟองอากาศติดผิวขณะจุ่ม ทำให้สารละลายสัมผัสไม่ทั่วถึง",
+    issue2_fixes_h: "วิธีแก้ไข:",
+    issue2_fix_1: "เพิ่มประสิทธิภาพการล้างไขมัน (ความเข้มข้น/อุณหภูมิ/เวลา)",
+    issue2_fix_2: "เขย่าหรือแกว่งชิ้นงานเบา ๆ ระหว่างจุ่มเพื่อไล่ฟองอากาศ",
+
+    issue3_title: "3) ชิ้นงานเกิดการกัดกร่อนมากเกินไป (Excessive Etching)",
+    issue3_causes_h: "สาเหตุ:",
+    issue3_cause_1: "จุ่มนานเกินช่วงแนะนำ (เกิน ~2–3 นาที)",
+    issue3_cause_2: "อุณหภูมิสารละลายสูงเกินไปทำให้อัตราปฏิกิริยาเร็วผิดปกติ",
+    issue3_fixes_h: "วิธีแก้ไข:",
+    issue3_fix_1: "ควบคุมเวลาให้แม่นยำด้วยตัวจับเวลา",
+    issue3_fix_2: "ควบคุมอุณหภูมิบ่อให้เป็นไปตามข้อกำหนดผู้ผลิต",
+
+    issue4_title: "4) ประสิทธิภาพของน้ำยาเสื่อมลงอย่างรวดเร็ว (Rapid Deterioration of Solution)",
+    issue4_causes_h: "สาเหตุ:",
+    issue4_cause_1: "การปนเปื้อนโลหะ/สารอินทรีย์ในบ่อ",
+    issue4_cause_2: "ความเข้มข้นไม่เหมาะสม และไม่มีการปรับเติมเมื่อจำเป็น",
+    issue4_fixes_h: "วิธีแก้ไข:",
+    issue4_fix_1: "รักษาความสะอาดบ่อและชิ้นงานก่อนจุ่ม",
+    issue4_fix_2: "หมั่นตรวจ/บันทึก และปรับเติมตามคำแนะนำของผู้ผลิต",
+
+    issue5_title: "5) การชุบ/เคลือบต่อยึดเกาะไม่ดี (Poor Adhesion in Subsequent Coating)",
+    issue5_causes_h: "สาเหตุ:",
+    issue5_cause_1: "ไม่ได้ปรับสภาพผิวด้วยกรดอ่อนก่อนเข้าบ่อถัดไป",
+    issue5_cause_2: "เกิดออกซิเดชันซ้ำเพราะค้างอากาศนานหรือการล้างไม่เพียงพอ",
+    issue5_fixes_h: "วิธีแก้ไข:",
+    issue5_fix_1: "จุ่มกรดอ่อน (acid activation) สั้น ๆ ตามด้วยล้าง DI ให้สะอาด",
+    issue5_fix_2: "จัดลำดับงานให้ ยก–ล้าง–เข้าบ่อถัดไป โดยไม่ปล่อยค้างอากาศ",
 
         footer_products:"หมวดผลิตภัณฑ์",
         footer_contact:"ติดต่อเรา",
@@ -563,19 +722,66 @@
         specs_v_rinse:"Rinse water/DI immediately",
         specs_n_rinse:"Avoid air-exposure > 3 s",
 
-        process_h:"Process steps",
-        proc_1:"Pre-clean zinc/die-cast zinc parts",
-        proc_2:"Rinse well",
-        proc_3:"Immerse in ACITEK MZ-52 ~2–3 min or to gloss",
-        proc_4:"Immediate water rinse — avoid long air exposure",
-        proc_5:"Rinse again",
-        proc_6:"If plating/coating next, acid condition lightly before the next bath",
+    process_h: "Process",
+    process_intro: "This method prepares zinc/zamak parts for a bright finish and readiness for subsequent plating/coating.",
+    proc_1: "Pre-cleaning: Thoroughly remove oils, soils, and greases from zinc or die-cast zinc parts to ensure uniform chemical action across the entire surface.",
+    proc_2: "Rinse with clean water: Rinse the cleaned parts to remove residual cleaners.",
+    proc_3: "Dip in ACITEK MZ-52: Immerse parts in ACITEK MZ-52 for ~2–3 minutes or until the desired brightness is achieved. ACITEK MZ-52 is a dedicated brightening dip for zinc alloys (Mazak) and die castings.",
+    proc_4: "Immediate rinse: Rinse immediately after MZ-52. Do not leave parts exposed to air, as staining/discoloration may occur.",
+    proc_5: "Second rinse: Rinse again to ensure no residuals remain.",
+    proc_6: "Mild acid conditioning: If proceeding to plating/coating, dip in a mild acid to condition the surface for good adhesion.",
 
-        safety_h:"Safety & environment",
-        safe_1:"Wear PPE: gloves, goggles, appropriate respirator.",
-        safe_2:"Provide ventilation; beware of splashes from hot chemistry.",
-        safe_3:"Waste with metals/acids: neutralize & treat per regulations.",
-        safe_4:"Follow product SDS/TDS and site EHS guidelines.",
+    // Safety
+    safety_h: "Safety & Environment",
+    safety_intro: "Because chemicals are used, strict safety and environmental practices are required.",
+    safe_1: "PPE: Wear suitable chemical-resistant gloves, safety goggles, and an appropriate mask/respirator to avoid direct contact and inhalation of vapors.",
+    safe_2: "Work area: Operate in a well-ventilated area and beware of splashes, especially when solutions are warm.",
+    safe_3: "Waste handling: Wastes may contain acids and dissolved metals; neutralize pH and treat to remove heavy metals per local regulations before discharge.",
+    safe_4: "Documentation: Consult the SDS/TDS of ACITEK MZ-52 and your site EHS procedures to ensure maximum safety and compliance.",
+
+    // Issues
+    issues_h: "Common Issues",
+    issues_intro: "Given the steps above, here are five common issues when using ACITEK MZ-52 with causes and remedies in detail.",
+
+    issue1_title: "1) Stained or Spotted Surface",
+    issue1_causes_h: "Causes:",
+    issue1_cause_1: "Insufficient rinsing after chemical dips leaves residues that react with the surface.",
+    issue1_cause_2: "Prolonged air exposure between dip and rinse causes localized oxidation.",
+    issue1_fixes_h: "Fixes:",
+    issue1_fix_1: "Increase rinse effectiveness (number of rinses/dwell/flow).",
+    issue1_fix_2: "Minimize time between lifting and rinsing.",
+
+    issue2_title: "2) Uneven Brightening",
+    issue2_causes_h: "Causes:",
+    issue2_cause_1: "Incomplete initial cleaning leaves oils/soils.",
+    issue2_cause_2: "Air bubbles adhere during immersion, blocking solution contact.",
+    issue2_fixes_h: "Fixes:",
+    issue2_fix_1: "Enhance degreasing (concentration/temperature/time).",
+    issue2_fix_2: "Gently agitate parts in the bath to dislodge bubbles.",
+
+    issue3_title: "3) Excessive Etching",
+    issue3_causes_h: "Causes:",
+    issue3_cause_1: "Dwell exceeds the ~2–3 minute guideline.",
+    issue3_cause_2: "Solution temperature too high increases reaction rate.",
+    issue3_fixes_h: "Fixes:",
+    issue3_fix_1: "Control time precisely with a timer.",
+    issue3_fix_2: "Maintain bath temperature per supplier specs.",
+
+    issue4_title: "4) Rapid Deterioration of Solution",
+    issue4_causes_h: "Causes:",
+    issue4_cause_1: "Contamination with metals/organics.",
+    issue4_cause_2: "Improper concentration and lack of timely replenishment.",
+    issue4_fixes_h: "Fixes:",
+    issue4_fix_1: "Keep the bath and incoming parts clean.",
+    issue4_fix_2: "Audit, log, and replenish per manufacturer guidance.",
+
+    issue5_title: "5) Poor Adhesion in Subsequent Coating",
+    issue5_causes_h: "Causes:",
+    issue5_cause_1: "No mild acid conditioning before the next bath.",
+    issue5_cause_2: "Re-oxidation due to air exposure or inadequate rinsing.",
+    issue5_fixes_h: "Fixes:",
+    issue5_fix_1: "Short acid activation followed by thorough DI rinse.",
+    issue5_fix_2: "Sequence tightly: lift–rinse–next bath without idle air time.",
 
         footer_products:"Products",
         footer_contact:"Contact Us",
